<resources>
    <string name="app_name">Ecommerce Project</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Please wait Loading…</string>
    <string name="new_product">New</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="paymentType">
        <item>دفع عند الاستلام</item>  <!-- ID : 0 -->
        <!--<item>مدى</item> &lt;!&ndash; ID : 1 &ndash;&gt;-->
        <!--<item>visa</item> &lt;!&ndash; ID : 2 &ndash;&gt;-->
    </string-array>
    <dimen name="code_text_size">11sp</dimen>

    <string name="twitter">https://twitter.com</string>
    <string name="snapChat">https://snapchat.com</string>
    <string name="instagram">https://www.instagram.com</string>


    <!--About Us-->
    <string name="BriefAboutUs"></string>
    <string name="OurVision"></string>
    <string name="OurMessage"></string>
    <string name="OurWorth"></string>
    <string name="OurWorthFirst"></string>
    <string name="OurWorthSecond"></string>
    <string name="OurWorthThird"></string>
    <string name="OurWorthFourth"></string>
    <string name="OurServiceFirst"></string>
    <string name="OurServiceSecond"></string>
</resources>
